# olaf_companion

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  expression_map.yaml  justfile  pyproject.toml  setup.toml
assets/audio/: manifest.json
build_documents/implementation-artifacts/: 1-1-project-bootstrap-toolchain.md  1-2-config-loaders-and-schema-validation.md  1-3-logging-structlog-redaction-rotation.md  1-4-event-schemas-error-hierarchy-protocol-seams.md  1-5-audio-capture-mic-input-device-pinning.md  1-6-wake-word-detection-porcupine.md  1-7-vad-bounded-capture-and-stt.md  2-1-audio-playback-speaker-pinning.md  2-2-talker-client-anthropic.md  2-3-cartesia-client-tts.md  2-4-turn-router-and-clarification.md  2-5-pipeline-assembly-simple-turn.md  3-1-expression-map-loader.md  3-2-mapping-resolver-and-cache.md  3-3-streaming-ssml-state-machine.md  3-4-event-schema-rebuild.md  3-5-event-publisher-ros2-and-log-adapter.md  3-6-mood-module-state-and-controller.md  3-7-audio-frame-metadata-and-ssml-prompt.md  4-1-belief-state-client.md  4-2-orchestrator-client-sse.md  4-3-activity-fsm-core.md  4-4-talker-tool-using-upgrade.md  4-5-wake-greeting.md  4-6-mic-mode-flip.md  4-7-turn-router-slow-path-and-complex-turn.md  5-5-cached-audio-deterministic-phrases.md  sprint-status.yaml
build_documents/planning-artifacts/: architecture.md  epics.md  olaf-embodiment-brief.md  prd.md  sprint-change-proposal-2026-05-06.md  sprint-change-proposal-2026-05-10.md  sprint-change-proposal-2026-05-12.md  validation-report-2026-05-06.md  voice-agent-pipeline-brief.md  voice-agent-pipeline.md
models/wakeword/: README.md  hey_olaf.ppn
prompts/: talker_system.md
src/voice_agent_pipeline/: __init__.py  __main__.py  errors.py  pipeline.py  sequential_loop.py
src/voice_agent_pipeline/activity/: __init__.py  greeting.py  machine.py  states.py
src/voice_agent_pipeline/audio/: __init__.py  _silence.py  cached.py  devices.py  filler.py  list_devices.py  mic_mode.py  play_test_tone.py  regenerate.py  transport.py  vad.py  wakeword.py
src/voice_agent_pipeline/config/: __init__.py  expression_map.py  setup.py  version.py
src/voice_agent_pipeline/lifecycle/: __init__.py
src/voice_agent_pipeline/logging/: __init__.py  redaction.py  setup.py  startup.py
src/voice_agent_pipeline/mood/: __init__.py  controller.py  state.py
src/voice_agent_pipeline/publisher/: __init__.py  interface.py  log_adapter.py  ros2.py
src/voice_agent_pipeline/schemas/: __init__.py  activity_event.py  envelope.py  expression_event.py  lifecycle_event.py  mood_event.py  speech_emotion_event.py  stream.py  vocalization_event.py
src/voice_agent_pipeline/splitter/: __init__.py  mapping.py  segmenter.py  state_machine.py
src/voice_agent_pipeline/stt/: __init__.py  backend.py  groq.py  whisper_cpu.py
src/voice_agent_pipeline/tts/: __init__.py  cartesia.py  client.py
src/voice_agent_pipeline/turn/: __init__.py  beliefs.py  orchestrator.py  router.py  talker.py  tools.py
tests/: _factories.py
tests/contract/: test_activity_event_schema.py  test_event_envelope.py  test_expression_event_schema.py  test_lifecycle_event_schema.py  test_mood_event_schema.py  test_schema_version_check.py  test_setup_schema_version.py  test_speech_emotion_event_schema.py  test_vocalization_event_schema.py
tests/integration/: test_activity_lifecycle.py  test_embodiment_alignment.py  test_intent_sleep.py  test_simple_turn.py
tests/unit/: test_pipeline.py  test_smoke.py
tests/unit/activity/: test_greeting.py  test_machine.py
tests/unit/audio/: test_cached.py  test_devices.py  test_filler.py  test_mic_mode.py  test_vad.py  test_wakeword.py
tests/unit/config/: test_expression_map.py  test_setup.py  test_version.py
tests/unit/errors/: test_hierarchy.py
tests/unit/logging/: conftest.py  test_redaction.py  test_setup.py  test_startup_reporter.py
tests/unit/mood/: test_controller.py  test_state.py
(+22 files in other folders)
